--- a/LeComCre.Web/LeComCre.Web/Portal.Master
+++ b/LeComCre.Web/LeComCre.Web/Portal.Master
@@ -4,6 +4,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title>..:: Lé Com Cre ::..</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7; IE=7" />
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-5" />
+    <meta name="copyright" content="Lé Com Cré - 2010" />
     <link href="CSS/browser.css" rel="stylesheet" type="text/css" />
     <link href="CSS/round.css" rel="stylesheet" type="text/css" />
     <link href="CSS/MasterPage.css" rel="stylesheet" type="text/css" />
@@ -16,11 +19,43 @@
 
     <script src="js/LeComCre.js" type="text/javascript"></script>
 
+    <script type="text/javascript" language="javascript">
+        jQuery(document).ready(function() {
+            jQuery('#dialogAlert').dialog({
+                autoOpen: false, bgiframe: false, hide: 'explode', resizable: true, draggable: true,
+                modal: true, show: 'slide', width: 280, height: 150, minHeight: 100, minWidth: 200,
+                maxHeight: 480, maxWidth: 640, title: "Aviso",
+                buttons: { "Ok": function() { jQuery('#dialogAlert').dialog("close"); }
+                }
+            });
+        });
+
+        //Metodo para criar um alert;
+        function Aviso(texto) {
+            jQuery(document).ready(function() {
+                EndRequest(this, null);
+                var p = document.getElementById("pAlert");
+                p.innerText = texto;
+                jQuery('#dialogAlert').dialog("open");
+                return false;
+            });
+            return false;
+        };
+    </script>
+
     <asp:ContentPlaceHolder ID="headPortal" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
+    <div id="dialogAlert" title="Aviso" style="display: none; font-size: x-small; color: Black;
+        font-family: Verdana; font-style: normal; font-weight: normal;" class="ui-dialog ui-resizable-handle">
+        <dl>
+            <dt><b>Aviso</b></dt>
+            <dd id="pAlert">
+            </dd>
+        </dl>
+    </div>
     <center>
         <table style="width: 1020px; height: auto;">
             <tr style="height: 150px;">
