--- a/LeComCre.Web/LeComCre.Web/Portal.Master
+++ b/LeComCre.Web/LeComCre.Web/Portal.Master
@@ -15,7 +15,8 @@
     <script src="js/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui-1.8.5.custom.min.js" type="text/javascript"></script>
     <script src="js/LeComCre.js" type="text/javascript"></script>
-
+    <script src="js/Safari3AjaxHack.js" type="text/javascript"></script>
+    
     <script type="text/javascript" language="javascript">
 
         //Metodo para criar um alert;
