--- a/LeComCre.Web/LeComCre.Web/Portal.Master
+++ b/LeComCre.Web/LeComCre.Web/Portal.Master
@@ -10,13 +10,13 @@
     <link href="CSS/browser.css" rel="stylesheet" type="text/css" />
     <link href="CSS/round.css" rel="stylesheet" type="text/css" />
     <link href="CSS/MasterPage.css" rel="stylesheet" type="text/css" />
-    <link type="text/css" href="css/ui-lightness/jquery-ui-1.8.5.custom.css" rel="stylesheet" />
+    <link href="http://ajax.microsoft.com/ajax/jquery.ui/1.8.5/themes/ui-lightness/jquery-ui.css" type="text/css" rel="stylesheet" />
 
-    <script src="js/jquery-1.4.2.min.js" type="text/javascript"></script>
-    <script src="js/jquery-ui-1.8.5.custom.min.js" type="text/javascript"></script>
+    <script src="http://ajax.microsoft.com/ajax/jQuery/jquery-1.4.2.min.js" type="text/javascript"></script>
+    <script src="http://ajax.microsoft.com/ajax/jquery.ui/1.8.5/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="http://ajax.microsoft.com/ajax/3.5/MicrosoftAjax.js" type="text/javascript"></script>
     <script src="js/LeComCre.js" type="text/javascript"></script>
     <script src="js/Safari3AjaxHack.js" type="text/javascript"></script>
-    
     <script type="text/javascript" language="javascript">
 
         //Metodo para criar um alert;
