--- a/LeComCre.Web/LeComCre.Web/Portal.Master
+++ b/LeComCre.Web/LeComCre.Web/Portal.Master
@@ -18,16 +18,15 @@
 </head>
 <body>
     <form id="form1" runat="server">
-    <asp:ScriptManager ID="ScriptManager1" runat="server" CompositeScript-ScriptMode="Auto"
+    <asp:ToolkitScriptManager ID="ScriptManager1" runat="server" CompositeScript-ScriptMode="Auto"
         AsyncPostBackTimeout="320" EnablePartialRendering="true" ScriptMode="Auto" OnAsyncPostBackError="ScriptManager1_AsyncPostBackError">
         <Scripts>
             <asp:ScriptReference Path="http://ajax.microsoft.com/ajax/jQuery/jquery-1.4.2.min.js" />
             <asp:ScriptReference Path="http://ajax.microsoft.com/ajax/jquery.ui/1.8.5/jquery-ui.min.js" />
-            <asp:ScriptReference Path="http://ajax.microsoft.com/ajax/3.5/MicrosoftAjax.js" />
             <asp:ScriptReference Path="js/LeComCre.js" />
             <asp:ScriptReference Path="js/Safari3AjaxHack.js" />
         </Scripts>
-    </asp:ScriptManager>
+    </asp:ToolkitScriptManager>
     <div id="dialogAlert" title="Aviso" style="display: none; font-size: x-small; color: Black;
         font-family: Verdana; font-style: normal; font-weight: normal;" class="ui-dialog ui-resizable-handle">
         <dl>
