--- a/LeComCre.Web/LeComCre.Web/Portal.Master
+++ b/LeComCre.Web/LeComCre.Web/Portal.Master
@@ -18,8 +18,9 @@
 </head>
 <body>
     <form id="form1" runat="server">
-    <asp:ToolkitScriptManager ID="ScriptManager1" runat="server" CompositeScript-ScriptMode="Auto"
-        AsyncPostBackTimeout="320" EnablePartialRendering="true" ScriptMode="Auto" OnAsyncPostBackError="ScriptManager1_AsyncPostBackError">
+    <asp:ToolkitScriptManager ID="ToolkitScriptManager1" runat="server" CompositeScript-ScriptMode="Auto"
+        AsyncPostBackTimeout="320" EnablePartialRendering="true" ScriptMode="Auto" 
+        onasyncpostbackerror="ToolkitScriptManager1_AsyncPostBackError" >
         <Scripts>
             <asp:ScriptReference Path="http://ajax.microsoft.com/ajax/jQuery/jquery-1.4.2.min.js" />
             <asp:ScriptReference Path="http://ajax.microsoft.com/ajax/jquery.ui/1.8.5/jquery-ui.min.js" />
