--- a/LeComCre.Web/LeComCre.Web/Portal.Master
+++ b/LeComCre.Web/LeComCre.Web/Portal.Master
@@ -8,8 +8,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7; IE=7" />
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-5" />
     <meta name="copyright" content="Lé Com Cré - 2010" />
-    <link href="CSS/browser.css" rel="stylesheet" type="text/css" />
-    <link href="CSS/round.css" rel="stylesheet" type="text/css" />
     <link href="CSS/MasterPage.css" rel="stylesheet" type="text/css" />
     <link href="http://ajax.microsoft.com/ajax/jquery.ui/1.8.5/themes/ui-lightness/jquery-ui.css"
         type="text/css" rel="stylesheet" />
@@ -18,9 +16,8 @@
 </head>
 <body>
     <form id="form1" runat="server">
-    <asp:ToolkitScriptManager ID="ToolkitScriptManager1" runat="server" CompositeScript-ScriptMode="Auto"
-        AsyncPostBackTimeout="320" EnablePartialRendering="true" ScriptMode="Auto" 
-        onasyncpostbackerror="ToolkitScriptManager1_AsyncPostBackError" >
+    <asp:ToolkitScriptManager ID="ToolkitScriptManager1" runat="server" AsyncPostBackTimeout="320"
+        EnablePartialRendering="true" OnAsyncPostBackError="ToolkitScriptManager1_AsyncPostBackError">
         <Scripts>
             <asp:ScriptReference Path="http://ajax.microsoft.com/ajax/jQuery/jquery-1.4.2.min.js" />
             <asp:ScriptReference Path="http://ajax.microsoft.com/ajax/jquery.ui/1.8.5/jquery-ui.min.js" />
