--- a/LeComCre.Web/LeComCre.Web/css/MasterPage.css
+++ b/LeComCre.Web/LeComCre.Web/css/MasterPage.css
@@ -1,44 +1,91 @@
-﻿
-a:link 
+﻿.td_menu
 {
-    text-decoration: none
+    font-family: Tahoma, Verdana, Arial, Times New Roman;
+    color: White;
+    text-align: left;
+    font-size: 13px;
 }
-a:visited 
+a:link
 {
-    text-decoration: none
+    text-decoration: none;
 }
-a:hover 
+a:visited
 {
-    text-decoration: underline overline; 
+    text-decoration: none;
 }
-.qq-uploader { position:relative; width: 100%;}
-
-.qq-upload-button {
-    display:block; /* or inline-block */
-    width: 105px; padding: 7px 0; text-align:center;    
-    background:#880000; border-bottom:1px solid #ddd;color:#fff;
+a:hover
+{
+    text-decoration: underline overline;
 }
-.qq-upload-button-hover {background:#cc0000;}
-.qq-upload-button-focus {outline:1px dotted black;}
-
-.qq-upload-drop-area {
-    position:absolute; top:0; left:0; width:100%; height:100%; min-height: 70px; z-index:2;
-    background:#FF9797; text-align:center; 
+.td_texto
+{
+    font-family: Tahoma, Verdana, Arial, Times New Roman;
+    color: Black;
+    text-align: left;
+    font-size: 12px;
+    font-weight: bold;
 }
-.qq-upload-drop-area span {
-    display:block; position:absolute; top: 50%; width:100%; margin-top:-8px; font-size:16px;
+.td_Titulo
+{
+    font-family: Tahoma, Verdana, Arial, Times New Roman;
+    color: Black;
+    text-align: left;
+    font-size: 13px;
 }
-.qq-upload-drop-area-active {background:#FF7171;}
-
-.qq-upload-list {margin:15px 35px; padding:0; list-style:disc;}
-.qq-upload-list li { margin:0; padding:0; line-height:15px; font-size:12px;}
-.qq-upload-file, .qq-upload-spinner, .qq-upload-size, .qq-upload-cancel, .qq-upload-failed-text {
-    margin-right: 7px;
+.td_dados
+{
+    font-family: Tahoma, Verdana, Arial, Times New Roman;
+    color: Black;
+    text-align: left;
+    vertical-align: top;
+    font-size: 12px;
+}
+.td_label
+{
+    font-family: Tahoma, Verdana, Arial, Times New Roman;
+    color: White;
+    background-color: Gray;
+    text-align: left;
+    vertical-align: top;
+    font-size: 12px;
+}
+.button
+{
+    border: 1px solid #BBBBBB;
+    font-size: 11px;
+    font-family: Tahoma, Verdana, Arial, Times New Roman;
+    font-weight: bold;
+    color: #888888;
+    width: 100px;
+    background-color: #EEEEEE;
+    width: 100px;
+}
+.tabela_login
+{
+    visibility: visible;
+    font-family: Tahoma, Verdana, Arial, Times New Roman;
+    font-size: 12px;
+    display: block;
+    font-weight: normal;
+    color: #000000;
+    vertical-align: middle;
+    text-align: left;
+    border: thin solid #000000;
+    width: 280px;
+    height: auto;
+}
+.Mensagem
+{
+    font-family: Verdana, Arial;
+    font-size: x-small;
+    font-style: normal;
+    color: Black;
+}
+.GridLinkButton
+{
+    font-family: Verdana, Arial;
+    font-size: x-small;
+    font-style: normal;
+    color: Gray;
 }
 
-.qq-upload-file {}
-.qq-upload-spinner {display:inline-block; background: url("loading.gif"); width:15px; height:15px; vertical-align:text-bottom;}
-.qq-upload-size,.qq-upload-cancel {font-size:11px;}
-
-.qq-upload-failed-text {display:none;}
-.qq-upload-fail .qq-upload-failed-text {display:inline;}
