--- a/LeComCre.Web/LeComCre.Web/Portal.Master
+++ b/LeComCre.Web/LeComCre.Web/Portal.Master
@@ -36,23 +36,22 @@
         </dl>
     </div>
     <center>
-        <table style="width: 1020px; height: auto;">
+        <table style="width: 798px; height: auto;">
             <tr style="height: 150px;">
-                <td id="Cabecalho" style="height: 100px; vertical-align: middle; text-align: center;">
+                <td id="Cabecalho" style="height: 150px; width:auto; vertical-align: middle; text-align: center;"
+                    colspan="2">
                     Cabeçalho
                 </td>
             </tr>
             <tr>
-                <td id="Corpo" style="height: 400px; vertical-align: top; text-align: center;">
+                <td class="td_dados" style="width: 150px; vertical-align: top; text-align: center;">
+                    Menu Lateral <br />Menu Lateral <br />Menu Lateral <br />Menu Lateral <br />Menu Lateral <br />
+                </td>
+                <td id="Corpo" style="height: 400px; width: 448px; vertical-align: top; text-align: center;">
                     <div>
                         <asp:ContentPlaceHolder ID="ContentPlaceHolderPortal" runat="server">
                         </asp:ContentPlaceHolder>
                     </div>
-                </td>
-            </tr>
-            <tr style="height: 100px;">
-                <td id="Rodape" style="height: 50px; vertical-align: middle; text-align: center;">
-                    Rodapé
                 </td>
             </tr>
         </table>
