--- a/LeComCre.Web/LeComCre.Web/Portal.Master
+++ b/LeComCre.Web/LeComCre.Web/Portal.Master
@@ -44,7 +44,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="td_dados" style="width: 150px; vertical-align: top; text-align: center;">
+                <td id="Menu" class="td_dados" style="width: 150px; vertical-align: top; text-align: center;">
                     Menu Lateral <br />Menu Lateral <br />Menu Lateral <br />Menu Lateral <br />Menu Lateral <br />
                 </td>
                 <td id="Corpo" style="height: 400px; width: 448px; vertical-align: top; text-align: center;">
