--- a/LeComCre.Web/LeComCre.Web/css/MasterPage.css
+++ b/LeComCre.Web/LeComCre.Web/css/MasterPage.css
@@ -64,14 +64,17 @@ a:hover
 
 .button
 {
-    border: 1px solid #BBBBBB;
-    font-size: 11px;
-    font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    color: #888888;
-    width: 100px;
-    background-color: #EEEEEE;
-    width: 100px;
+    display: inline-block; 
+    position: relative; 
+    padding: 0; 
+    margin-right: .1em; 
+    text-decoration: none !important; 
+    cursor: pointer; 
+    text-align: center; 
+    zoom: 1; 
+    overflow: visible;
+    height:20px;
+    min-width:80px;
 }
 .tabela_login
 {
