--- a/LeComCre.Web/LeComCre.Web/Portal.Master
+++ b/LeComCre.Web/LeComCre.Web/Portal.Master
@@ -30,7 +30,7 @@
     <div id="dialogAlert" title="Aviso" style="display: none; font-size: x-small; color: Black;
         font-family: Verdana; font-style: normal; font-weight: normal;" class="ui-dialog ui-resizable-handle">
         <dl>
-            <dt><b>Aviso</b></dt>
+            <dt><b><span style="font-size:11px; font-weight:bold;">Aviso</span></b></dt>
             <dd id="pAlert">
             </dd>
         </dl>
