--- a/LeComCre.Web/LeComCre.Web/css/MasterPage.css
+++ b/LeComCre.Web/LeComCre.Web/css/MasterPage.css
@@ -2,6 +2,7 @@
 	font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
     color: Black;
     font-size: 11px;
+    background-repeat:repeat;
 }
 td img 
 {
