--- a/LeComCre.Web/LeComCre.Web/Menu.master
+++ b/LeComCre.Web/LeComCre.Web/Menu.master
@@ -2,6 +2,12 @@
     CodeBehind="Menu.master.cs" Inherits="LeComCre.Web.Menu" %>
 
 <asp:Content ID="Content1" ContentPlaceHolderID="headPortal" runat="server">
+    <style type="text/css">
+        body
+        {
+            background-color: #F9f6bd;
+        }
+    </style>
     <asp:ContentPlaceHolder ID="MenuHead" runat="server">
     </asp:ContentPlaceHolder>
 </asp:Content>
@@ -63,8 +69,9 @@
         </tr>
         <tr>
             <td rowspan="3" colspan="6">
-                <img name="master_r1_c1" src="images/master_r1_c1.png" width="267" height="89" border="0"
-                    id="master_r1_c1" alt="" />
+                <a href="Default.aspx">
+                    <img name="master_r1_c1" src="images/master_r1_c1.png" width="267" height="89" border="0"
+                        id="master_r1_c1" alt="" /></a>
             </td>
             <td colspan="10">
                 <img name="master_r1_c7" src="images/master_r1_c7.png" width="533" height="11" border="0"
@@ -76,20 +83,24 @@
         </tr>
         <tr>
             <td colspan="3">
-                <img name="master_r2_c7" src="images/master_r2_c7.png" width="145" height="40" border="0"
-                    id="master_r2_c7" alt="" />
+                <a href="QuemSomos.aspx">
+                    <img name="master_r2_c7" src="images/master_r2_c7.png" width="145" height="40" border="0"
+                        id="master_r2_c7" alt="" /></a>
             </td>
             <td colspan="2">
-                <img name="master_r2_c10" src="images/master_r2_c10.png" width="150" height="40"
-                    border="0" id="master_r2_c10" alt="" />
+                <a href="acessebilidade.aspx">
+                    <img name="master_r2_c10" src="images/master_r2_c10.png" width="150" height="40"
+                        border="0" id="master_r2_c10" alt="" /></a>
             </td>
             <td colspan="2">
-                <img name="master_r2_c12" src="images/master_r2_c12.png" width="129" height="40"
-                    border="0" id="master_r2_c12" alt="" />
+                <a href="Cadastrar.aspx">
+                    <img name="master_r2_c12" src="images/master_r2_c12.png" width="129" height="40"
+                        border="0" id="master_r2_c12" alt="" /></a>
             </td>
             <td colspan="3">
-                <img name="master_r2_c14" src="images/master_r2_c14.png" width="109" height="40"
-                    border="0" id="master_r2_c14" alt="" />
+                <a href="email.aspx">
+                    <img name="master_r2_c14" src="images/master_r2_c14.png" width="109" height="40"
+                        border="0" id="master_r2_c14" alt="" /></a>
             </td>
             <td>
                 <img src="images/spacer.gif" width="1" height="40" border="0" alt="" />
@@ -106,24 +117,29 @@
         </tr>
         <tr>
             <td colspan="4">
-                <img name="master_r4_c1" src="images/master_r4_c1.png" width="143" height="95" border="0"
-                    id="master_r4_c1" alt="" />
+                <a href="jogos.aspx">
+                    <img name="master_r4_c1" src="images/master_r4_c1.png" width="143" height="95" border="0"
+                        id="master_r4_c1" alt="" /></a>
             </td>
             <td colspan="3">
-                <img name="master_r4_c5" src="images/master_r4_c5.png" width="155" height="95" border="0"
-                    id="master_r4_c5" alt="" />
+                <a href="Colorir.aspx">
+                    <img name="master_r4_c5" src="images/master_r4_c5.png" width="155" height="95" border="0"
+                        id="master_r4_c5" alt="" /></a>
             </td>
             <td>
-                <img name="master_r4_c8" src="images/master_r4_c8.png" width="102" height="95" border="0"
-                    id="master_r4_c8" alt="" />
+                <a href="Assuntos.aspx">
+                    <img name="master_r4_c8" src="images/master_r4_c8.png" width="102" height="95" border="0"
+                        id="master_r4_c8" alt="" /></a>
             </td>
             <td colspan="2">
-                <img name="master_r4_c9" src="images/master_r4_c9.png" width="138" height="95" border="0"
-                    id="master_r4_c9" alt="" />
+                <a href="Temas.aspx">
+                    <img name="master_r4_c9" src="images/master_r4_c9.png" width="138" height="95" border="0"
+                        id="master_r4_c9" alt="" /></a>
             </td>
             <td colspan="2">
-                <img name="master_r4_c11" src="images/master_r4_c11.png" width="142" height="95"
-                    border="0" id="master_r4_c11" alt="" />
+                <a href="Chat.aspx">
+                    <img name="master_r4_c11" src="images/master_r4_c11.png" width="142" height="95"
+                        border="0" id="master_r4_c11" alt="" /></a>
             </td>
             <td colspan="4">
                 <img name="master_r4_c13" src="images/master_r4_c13.png" width="120" height="95"
