--- a/LeComCre.Web/LeComCre.Web/Portal.Master
+++ b/LeComCre.Web/LeComCre.Web/Portal.Master
@@ -42,7 +42,8 @@
         </dl>
     </div>
     <center>
-        <table style="width: 800px; height: auto;" border="0" cellpadding="0" cellspacing="0" width="800px">
+        <table style="width: 800px; height: auto;" border="0" cellpadding="0" cellspacing="0"
+            width="800px">
             <tr>
                 <td>
                     <asp:ContentPlaceHolder ID="ContentPlaceHolderPortal" runat="server">
