--- a/LeComCre.Web/LeComCre.Web/MenuDefault.master
+++ b/LeComCre.Web/LeComCre.Web/MenuDefault.master
@@ -1,19 +1,15 @@
-﻿<%@ Master Language="C#" MasterPageFile="~/Portal.Master" AutoEventWireup="true"
-    CodeBehind="MenuDefault.master.cs" Inherits="LeComCre.Web.MenuDefault" %>
+﻿<%@ Master Language="C#" MasterPageFile="~/Portal.Master" AutoEventWireup="true" CodeBehind="MenuDefault.master.cs"
+    Inherits="LeComCre.Web.MenuDefault" %>
 
 <asp:Content ID="Content1" ContentPlaceHolderID="headPortal" runat="server">
     <style type="text/css">
-        body
-        {
-            background-color: #F9f6bd;
-        }
+        body { background-color: #F9f6bd; }
     </style>
     <asp:ContentPlaceHolder ID="MenuHead" runat="server">
     </asp:ContentPlaceHolder>
 </asp:Content>
 <asp:Content ID="Content2" ContentPlaceHolderID="ContentPlaceHolderPortal" runat="server">
-    <table style="display: inline-table;" border="0" cellpadding="0" cellspacing="0"
-        width="800">
+    <table style="display: inline-table;" border="0" cellpadding="0" cellspacing="0" width="800">
         <tr>
             <td>
                 <img src="images/spacer.gif" width="37" height="1" border="0" alt="" />
@@ -70,12 +66,12 @@
         <tr>
             <td rowspan="3" colspan="6">
                 <a href="Default.aspx">
-                    <img name="master_r1_c1" src="images/master_r1_c1.png" width="267" height="89" border="0"
-                        id="master_r1_c1" alt="" /></a>
+                    <img name="master_r1_c1" src="images/master_r1_c1.png" width="267" height="89" border="0" id="master_r1_c1"
+                        alt="" /></a>
             </td>
             <td colspan="10">
-                <img name="master_r1_c7" src="images/master_r1_c7.png" width="533" height="11" border="0"
-                    id="master_r1_c7" alt="" />
+                <img name="master_r1_c7" src="images/master_r1_c7.png" width="533" height="11" border="0" id="master_r1_c7"
+                    alt="" />
             </td>
             <td>
                 <img src="images/spacer.gif" width="1" height="11" border="0" alt="" />
@@ -84,23 +80,23 @@
         <tr>
             <td colspan="3">
                 <a href="QuemSomos.aspx">
-                    <img name="master_r2_c7" src="images/master_r2_c7.png" width="145" height="40" border="0"
-                        id="master_r2_c7" alt="" /></a>
+                    <img name="master_r2_c7" src="images/master_r2_c7.png" width="145" height="40" border="0" id="master_r2_c7"
+                        alt="" /></a>
             </td>
             <td colspan="2">
                 <a href="acessebilidade.aspx">
-                    <img name="master_r2_c10" src="images/master_r2_c10.png" width="150" height="40"
-                        border="0" id="master_r2_c10" alt="" /></a>
+                    <img name="master_r2_c10" src="images/master_r2_c10.png" width="150" height="40" border="0"
+                        id="master_r2_c10" alt="" /></a>
             </td>
             <td colspan="2">
                 <a href="Cadastrar.aspx">
-                    <img name="master_r2_c12" src="images/master_r2_c12.png" width="129" height="40"
-                        border="0" id="master_r2_c12" alt="" /></a>
+                    <img name="master_r2_c12" src="images/master_r2_c12.png" width="129" height="40" border="0"
+                        id="master_r2_c12" alt="" /></a>
             </td>
             <td colspan="3">
                 <a href="email.aspx">
-                    <img name="master_r2_c14" src="images/master_r2_c14.png" width="109" height="40"
-                        border="0" id="master_r2_c14" alt="" /></a>
+                    <img name="master_r2_c14" src="images/master_r2_c14.png" width="109" height="40" border="0"
+                        id="master_r2_c14" alt="" /></a>
             </td>
             <td>
                 <img src="images/spacer.gif" width="1" height="40" border="0" alt="" />
@@ -108,8 +104,8 @@
         </tr>
         <tr>
             <td colspan="10">
-                <img name="master_r3_c7" src="images/master_r3_c7.png" width="533" height="38" border="0"
-                    id="master_r3_c7" alt="" />
+                <img name="master_r3_c7" src="images/master_r3_c7.png" width="533" height="38" border="0" id="master_r3_c7"
+                    alt="" />
             </td>
             <td>
                 <img src="images/spacer.gif" width="1" height="38" border="0" alt="" />
@@ -118,32 +114,32 @@
         <tr>
             <td colspan="4">
                 <a href="jogos.aspx">
-                    <img name="master_r4_c1" src="images/master_r4_c1.png" width="143" height="95" border="0"
-                        id="master_r4_c1" alt="" /></a>
+                    <img name="master_r4_c1" src="images/master_r4_c1.png" width="143" height="95" border="0" id="master_r4_c1"
+                        alt="" /></a>
             </td>
             <td colspan="3">
                 <a href="Colorir.aspx">
-                    <img name="master_r4_c5" src="images/master_r4_c5.png" width="155" height="95" border="0"
-                        id="master_r4_c5" alt="" /></a>
+                    <img name="master_r4_c5" src="images/master_r4_c5.png" width="155" height="95" border="0" id="master_r4_c5"
+                        alt="" /></a>
             </td>
             <td>
                 <a href="Assuntos.aspx">
-                    <img name="master_r4_c8" src="images/master_r4_c8.png" width="102" height="95" border="0"
-                        id="master_r4_c8" alt="" /></a>
+                    <img name="master_r4_c8" src="images/master_r4_c8.png" width="102" height="95" border="0" id="master_r4_c8"
+                        alt="" /></a>
             </td>
             <td colspan="2">
                 <a href="Temas.aspx">
-                    <img name="master_r4_c9" src="images/master_r4_c9.png" width="138" height="95" border="0"
-                        id="master_r4_c9" alt="" /></a>
+                    <img name="master_r4_c9" src="images/master_r4_c9.png" width="138" height="95" border="0" id="master_r4_c9"
+                        alt="" /></a>
             </td>
             <td colspan="2">
                 <a href="Chat.aspx">
-                    <img name="master_r4_c11" src="images/master_r4_c11.png" width="142" height="95"
-                        border="0" id="master_r4_c11" alt="" /></a>
+                    <img name="master_r4_c11" src="images/master_r4_c11.png" width="142" height="95" border="0"
+                        id="master_r4_c11" alt="" /></a>
             </td>
             <td colspan="4">
-                <img name="master_r4_c13" src="images/master_r4_c13.png" width="120" height="95"
-                    border="0" id="master_r4_c13" alt="" />
+                <img name="master_r4_c13" src="images/master_r4_c13.png" width="120" height="95" border="0"
+                    id="master_r4_c13" alt="" />
             </td>
             <td>
                 <img src="images/spacer.gif" width="1" height="95" border="0" alt="" />
@@ -151,16 +147,16 @@
         </tr>
         <tr>
             <td colspan="7" style="background-color: White;">
-                <img name="master_r5_c1" src="images/master_r5_c1.png" width="298" height="34" border="0"
-                    id="master_r5_c1" alt="" />
+                <img name="master_r5_c1" src="images/master_r5_c1.png" width="298" height="34" border="0" id="master_r5_c1"
+                    alt="" />
             </td>
             <td colspan="3" style="background-color: White;">
-                <img name="master_r5_c8" src="images/master_r5_c8.png" width="240" height="34" border="0"
-                    id="master_r5_c8" alt="" />
+                <img name="master_r5_c8" src="images/master_r5_c8.png" width="240" height="34" border="0" id="master_r5_c8"
+                    alt="" />
             </td>
             <td colspan="6" style="background-color: White;">
-                <img name="master_r5_c11" src="images/master_r5_c11.png" width="262" height="34"
-                    border="0" id="master_r5_c11" alt="" />
+                <img name="master_r5_c11" src="images/master_r5_c11.png" width="262" height="34" border="0"
+                    id="master_r5_c11" alt="" />
             </td>
             <td>
                 <img src="images/spacer.gif" width="1" height="34" border="0" alt="" />
@@ -168,13 +164,23 @@
         </tr>
         <tr>
             <td colspan="2" style="background-color: White;">
-                <img name="master_r6_c1" src="images/master_r6_c1.png" width="44" height="33" border="0"
-                    id="master_r6_c1" alt="" />
+                <img name="master_r6_c1" src="images/master_r6_c1.png" width="44" height="33" border="0" id="master_r6_c1"
+                    alt="" />
             </td>
             <td colspan="13" style="width: 707px; height: 33px; vertical-align: middle; text-align: left;
                 background-color: White;">
-                <asp:ContentPlaceHolder ID="MenuTitulo" runat="server">
-                </asp:ContentPlaceHolder>
+                <table width="100%" border="0" cellpadding="0" cellspacing="0">
+                    <tr>
+                        <td style="width: 90%">
+                            <asp:ContentPlaceHolder ID="MenuTitulo" runat="server">
+                            </asp:ContentPlaceHolder>
+                        </td>
+                        <td style="width: 10%">
+                            <a href="javascript:mudaTamanho('texto', -1);">A-</a> <a href="javascript:mudaTamanho('texto', 1);">
+                                A+</a>
+                        </td>
+                    </tr>
+                </table>
             </td>
             <td style="background-color: White;">
                 <img name="master_r6_c16" src="images/master_r6_c16.png" width="49" height="33" border="0"
@@ -186,20 +192,20 @@
         </tr>
         <tr>
             <td colspan="3" style="background-color: White;">
-                <img name="master_r7_c1" src="images/master_r7_c1.png" width="90" height="32" border="0"
-                    id="master_r7_c1" alt="" />
+                <img name="master_r7_c1" src="images/master_r7_c1.png" width="90" height="32" border="0" id="master_r7_c1"
+                    alt="" />
             </td>
             <td colspan="2" style="background-color: White;">
-                <img name="master_r7_c4" src="images/master_r7_c4.png" width="87" height="32" border="0"
-                    id="master_r7_c4" alt="" />
+                <img name="master_r7_c4" src="images/master_r7_c4.png" width="87" height="32" border="0" id="master_r7_c4"
+                    alt="" />
             </td>
             <td style="background-color: White;">
-                <img name="master_r7_c6" src="images/master_r7_c6.png" width="90" height="32" border="0"
-                    id="master_r7_c6" alt="" />
+                <img name="master_r7_c6" src="images/master_r7_c6.png" width="90" height="32" border="0" id="master_r7_c6"
+                    alt="" />
             </td>
             <td colspan="8" style="background-color: White;">
-                <img name="master_r7_c7" src="images/master_r7_c7.png" width="456" height="32" border="0"
-                    id="master_r7_c7" alt="" />
+                <img name="master_r7_c7" src="images/master_r7_c7.png" width="456" height="32" border="0" id="master_r7_c7"
+                    alt="" />
             </td>
             <td colspan="2" style="background-color: White;">
                 <img name="master_r7_c15" src="images/master_r7_c15.png" width="77" height="32" border="0"
@@ -210,50 +216,50 @@
             </td>
         </tr>
         <tr>
-            <td style="background-image: url('images/master_r8_c1.png'); background-repeat: repeat-y;
-                height: auto; background-color: White;">
-                <img name="master_r8_c1" src="images/master_r8_c1.png" width="37" height="145" border="0"
-                    id="master_r8_c1" alt="" />
+            <td style="background-image: url('images/master_r8_c1.png'); background-repeat: repeat-y; height: auto;
+                background-color: White;">
+                <img name="master_r8_c1" src="images/master_r8_c1.png" width="37" height="145" border="0" id="master_r8_c1"
+                    alt="" />
             </td>
-            <td rowspan="2" colspan="4" style="width: 140px; height: 260px; background-color: White;
-                vertical-align: top; text-align: left; height: auto;">
+            <td rowspan="2" colspan="4" style="width: 140px; height: 260px; background-color: White; vertical-align: top;
+                text-align: left; height: auto;">
                 <asp:ContentPlaceHolder ID="MenuDireito" runat="server">
                 </asp:ContentPlaceHolder>
             </td>
-            <td style="background-image: url('images/master_r8_c6.png'); background-repeat: repeat-y;
-                height: auto; background-color: White;">
-                <img name="master_r8_c6" src="images/master_r8_c6.png" width="90" height="145" border="0"
-                    id="master_r8_c6" alt="" />
+            <td style="background-image: url('images/master_r8_c6.png'); background-repeat: repeat-y; height: auto;
+                background-color: White;">
+                <img name="master_r8_c6" src="images/master_r8_c6.png" width="90" height="145" border="0" id="master_r8_c6"
+                    alt="" />
             </td>
-            <td rowspan="2" colspan="8" style="width: 456px; height: auto; background-color: White;
-                vertical-align: top; text-align: left;">
+            <td rowspan="2" colspan="8" style="width: 456px; height: auto; background-color: White; vertical-align: top;
+                text-align: left;">
                 <asp:ContentPlaceHolder ID="MenuCorpo" runat="server">
                 </asp:ContentPlaceHolder>
             </td>
             <td colspan="2" style="background-image: url('images/master_r8_c15.png'); background-color: White;
                 background-repeat: repeat-y; height: auto;">
-                <img name="master_r8_c15" src="images/master_r8_c15.png" width="77" height="145"
-                    border="0" id="master_r8_c15" alt="" />
+                <img name="master_r8_c15" src="images/master_r8_c15.png" width="77" height="145" border="0"
+                    id="master_r8_c15" alt="" />
             </td>
             <td>
                 <img src="images/spacer.gif" width="1" height="145" border="0" alt="" />
             </td>
         </tr>
         <tr>
-            <td style="background-image: url('images/master_r9_c1.png'); background-repeat: repeat-y;
-                height: auto; background-color: White;">
-                <img name="master_r9_c1" src="images/master_r9_c1.png" width="37" height="115" border="0"
-                    id="master_r9_c1" alt="" />
+            <td style="background-image: url('images/master_r9_c1.png'); background-repeat: repeat-y; height: auto;
+                background-color: White;">
+                <img name="master_r9_c1" src="images/master_r9_c1.png" width="37" height="115" border="0" id="master_r9_c1"
+                    alt="" />
             </td>
-            <td style="background-image: url('images/master_r9_c6.png'); background-repeat: repeat-y;
-                height: auto; background-color: White;">
-                <img name="master_r9_c6" src="images/master_r9_c6.png" width="90" height="115" border="0"
-                    id="master_r9_c6" alt="" />
+            <td style="background-image: url('images/master_r9_c6.png'); background-repeat: repeat-y; height: auto;
+                background-color: White;">
+                <img name="master_r9_c6" src="images/master_r9_c6.png" width="90" height="115" border="0" id="master_r9_c6"
+                    alt="" />
             </td>
             <td colspan="2" style="background-image: url('images/master_r9_c15.png'); background-color: White;
                 background-repeat: repeat-y; height: auto;">
-                <img name="master_r9_c15" src="images/master_r9_c15.png" width="77" height="115"
-                    border="0" id="master_r9_c15" alt="" />
+                <img name="master_r9_c15" src="images/master_r9_c15.png" width="77" height="115" border="0"
+                    id="master_r9_c15" alt="" />
             </td>
             <td>
                 <img src="images/spacer.gif" width="1" height="115" border="0" alt="" />
@@ -265,20 +271,20 @@
                     id="master_r10_c1" alt="" />
             </td>
             <td colspan="4" style="background-color: White;">
-                <img name="master_r10_c2" src="images/master_r10_c2.png" width="140" height="57"
-                    border="0" id="master_r10_c2" alt="" />
+                <img name="master_r10_c2" src="images/master_r10_c2.png" width="140" height="57" border="0"
+                    id="master_r10_c2" alt="" />
             </td>
             <td style="background-color: White;">
                 <img name="master_r10_c6" src="images/master_r10_c6.png" width="90" height="57" border="0"
                     id="master_r10_c6" alt="" />
             </td>
             <td colspan="8" style="background-color: White;">
-                <img name="master_r10_c7" src="images/master_r10_c7.png" width="456" height="57"
-                    border="0" id="master_r10_c7" alt="" />
+                <img name="master_r10_c7" src="images/master_r10_c7.png" width="456" height="57" border="0"
+                    id="master_r10_c7" alt="" />
             </td>
             <td colspan="2" style="background-color: White;">
-                <img name="master_r10_c15" src="images/master_r10_c15.png" width="77" height="57"
-                    border="0" id="master_r10_c15" alt="" />
+                <img name="master_r10_c15" src="images/master_r10_c15.png" width="77" height="57" border="0"
+                    id="master_r10_c15" alt="" />
             </td>
             <td>
                 <img src="images/spacer.gif" width="1" height="57" border="0" alt="" />
