--- a/LeComCre.Web/LeComCre.Web/css/MasterPage.css
+++ b/LeComCre.Web/LeComCre.Web/css/MasterPage.css
@@ -69,10 +69,10 @@ a:hover
     font-size: 12px;
     display: block;
     font-weight: normal;
-    color: #000000;
+    color: #F9f6bd;
     vertical-align: middle;
     text-align: left;
-    border: thin solid #000000;
+    border: thin solid #F9f6bd;
     width: 280px;
     height: auto;
 }
