--- a/LeComCre.Web/LeComCre.Web/MasterQuemSomos.master
+++ b/LeComCre.Web/LeComCre.Web/MasterQuemSomos.master
@@ -1,11 +1,9 @@
-﻿<%@ Master Language="C#" MasterPageFile="~/Portal.Master" AutoEventWireup="true" CodeBehind="MasterQuemSomos.master.cs" Inherits="LeComCre.Web.MasterQuemSomos" %>
+﻿<%@ Master Language="C#" MasterPageFile="~/Portal.Master" AutoEventWireup="true" CodeBehind="MasterQuemSomos.master.cs"
+    Inherits="LeComCre.Web.MasterQuemSomos" %>
 
 <asp:Content ID="Content1" ContentPlaceHolderID="headPortal" runat="server">
     <style type="text/css">
-        body
-        {
-            background-color: #F9f6bd;
-        }
+        body { background-color: #F9f6bd; }
     </style>
     <asp:ContentPlaceHolder ID="MenuHead" runat="server">
     </asp:ContentPlaceHolder>
@@ -266,9 +264,11 @@
                 <img name="login_r9_c13" src="images/login_r9_c13.gif" width="316" height="83" border="0" id="login_r9_c13"
                     alt="" />
             </td>
-            <td colspan="3">
-                <img name="login_r9_c18" src="images/login_r9_c18.gif" width="153" height="83" border="0" id="login_r9_c18"
-                    alt="" />
+            <td colspan="3" style="background-image: url('images/login_r9_c18.gif'); text-align: right;
+                vertical-align: middle;" align="right" valign="middle">
+                <b><a href="#" onclick="mudaTamanho('textoDireito', -1);mudaTamanho('textoCorpo', -1);" class="td_Titulo">
+                    A-</a></b> <b><a href="#" onclick="mudaTamanho('textoDireito', 1);mudaTamanho('textoCorpo', 1);"
+                        class="td_Titulo">A+</a></b>
             </td>
             <td colspan="2">
                 <img name="login_r9_c21" src="images/login_r9_c21.gif" width="40" height="83" border="0" id="login_r9_c21"
