--- a/LeComCre.Web/LeComCre.Web/MasterContato.master
+++ b/LeComCre.Web/LeComCre.Web/MasterContato.master
@@ -266,9 +266,11 @@
                 <img name="login_r9_c13" src="images/login_r9_c13.gif" width="316" height="83" border="0" id="login_r9_c13"
                     alt="" />
             </td>
-            <td colspan="3">
-                <img name="login_r9_c18" src="images/login_r9_c18.gif" width="153" height="83" border="0" id="login_r9_c18"
-                    alt="" />
+            <td colspan="3" style="background-image: url('images/login_r9_c18.gif'); text-align: right;
+                vertical-align: middle;" align="right" valign="middle">
+                <b><a href="#" onclick="mudaTamanho('textoDireito', -1);mudaTamanho('textoCorpo', -1);" class="td_Titulo">
+                    A-</a></b> <b><a href="#" onclick="mudaTamanho('textoDireito', 1);mudaTamanho('textoCorpo', 1);"
+                        class="td_Titulo">A+</a></b>
             </td>
             <td colspan="2">
                 <img name="login_r9_c21" src="images/login_r9_c21.gif" width="40" height="83" border="0" id="login_r9_c21"
