--- a/LeComCre.Web/LeComCre.Web/MasterForum.master
+++ b/LeComCre.Web/LeComCre.Web/MasterForum.master
@@ -1,10 +1,9 @@
-﻿<%@ Master Language="C#" MasterPageFile="~/Portal.Master" AutoEventWireup="true" CodeBehind="MasterForum.master.cs" Inherits="LeComCre.Web.MasterForum" %>
+﻿<%@ Master Language="C#" MasterPageFile="~/Portal.Master" AutoEventWireup="true" CodeBehind="MasterForum.master.cs"
+    Inherits="LeComCre.Web.MasterForum" %>
+
 <asp:Content ID="Content1" ContentPlaceHolderID="headPortal" runat="server">
     <style type="text/css">
-        body
-        {
-            background-color: #EAEAEA;
-        }
+        body { background-color: #EAEAEA; }
     </style>
     <asp:ContentPlaceHolder ID="MenuHead" runat="server">
     </asp:ContentPlaceHolder>
@@ -96,28 +95,33 @@
         </tr>
         <tr>
             <td rowspan="2" colspan="6">
-                <a href="Default.aspx"><img name="forum_r2_c1" src="images/forum_r2_c1.gif" width="230" height="75" border="0" id="forum_r2_c1"
-                    alt="LéComCré" /></a>
+                <a href="Default.aspx">
+                    <img name="forum_r2_c1" src="images/forum_r2_c1.gif" width="230" height="75" border="0" id="forum_r2_c1"
+                        alt="LéComCré" /></a>
             </td>
             <td colspan="6">
                 <img name="forum_r2_c7" src="images/forum_r2_c7.gif" width="262" height="47" border="0" id="forum_r2_c7"
                     alt="" />
             </td>
             <td>
-                <a href="QuemSomos.aspx"><img name="forum_r2_c13" src="images/forum_r2_c13.gif" width="134" height="47" border="0" id="forum_r2_c13"
-                    alt="Quem Somos" /></a>
+                <a href="QuemSomos.aspx">
+                    <img name="forum_r2_c13" src="images/forum_r2_c13.gif" width="134" height="47" border="0" id="forum_r2_c13"
+                        alt="Quem Somos" /></a>
             </td>
             <td colspan="3">
-                <a href="acessebilidade.aspx"><img name="forum_r2_c14" src="images/forum_r2_c14.gif" width="150" height="47" border="0" id="forum_r2_c14"
-                    alt="Acessebilidade" /></a>
+                <a href="acessebilidade.aspx">
+                    <img name="forum_r2_c14" src="images/forum_r2_c14.gif" width="150" height="47" border="0" id="forum_r2_c14"
+                        alt="Acessebilidade" /></a>
             </td>
             <td colspan="3">
-                <a href="Cadastrar.aspx"><img name="forum_r2_c17" src="images/forum_r2_c17.gif" width="127" height="47" border="0" id="forum_r2_c17"
-                    alt="Cadastre" /></a>
+                <a href="Cadastrar.aspx">
+                    <img name="forum_r2_c17" src="images/forum_r2_c17.gif" width="127" height="47" border="0" id="forum_r2_c17"
+                        alt="Cadastre" /></a>
             </td>
             <td colspan="3">
-                <a href="email.aspx"><img name="forum_r2_c20" src="images/forum_r2_c20.gif" width="98" height="47" border="0" id="forum_r2_c20"
-                    alt="Contato" /></a>
+                <a href="email.aspx">
+                    <img name="forum_r2_c20" src="images/forum_r2_c20.gif" width="98" height="47" border="0" id="forum_r2_c20"
+                        alt="Contato" /></a>
             </td>
             <td rowspan="11">
                 <img name="forum_r2_c23" src="images/forum_r2_c23.gif" width="23" height="758" border="0" id="forum_r2_c23"
@@ -155,32 +159,36 @@
                     alt="" />
             </td>
             <td rowspan="4" colspan="4">
-                <a href="Colorir.aspx"><img name="forum_r5_c6" src="images/forum_r5_c6.gif" width="146" height="94" border="0" id="forum_r5_c6"
-                    alt="Colorir" /></a>
+                <a href="Colorir.aspx">
+                    <img name="forum_r5_c6" src="images/forum_r5_c6.gif" width="146" height="94" border="0" id="forum_r5_c6"
+                        alt="Colorir" /></a>
             </td>
             <td rowspan="4">
                 <img name="forum_r5_c10" src="images/forum_r5_c10.gif" width="51" height="94" border="0" id="forum_r5_c10"
                     alt="" />
             </td>
             <td rowspan="4">
-                <a href="Assuntos.aspx"><img name="forum_r5_c11" src="images/forum_r5_c11.gif" width="84" height="94" border="0" id="forum_r5_c11"
-                    alt="Forum" /></a>
+                <a href="Assuntos.aspx">
+                    <img name="forum_r5_c11" src="images/forum_r5_c11.gif" width="84" height="94" border="0" id="forum_r5_c11"
+                        alt="Forum" /></a>
             </td>
             <td rowspan="4">
                 <img name="forum_r5_c12" src="images/forum_r5_c12.gif" width="30" height="94" border="0" id="forum_r5_c12"
                     alt="" />
             </td>
             <td rowspan="4" colspan="2">
-                <a href="Temas.aspx"><img name="forum_r5_c13" src="images/forum_r5_c13.gif" width="150" height="94" border="0" id="forum_r5_c13"
-                    alt="Temas Profissionais" /></a>
+                <a href="Temas.aspx">
+                    <img name="forum_r5_c13" src="images/forum_r5_c13.gif" width="150" height="94" border="0" id="forum_r5_c13"
+                        alt="Temas Profissionais" /></a>
             </td>
             <td rowspan="4">
                 <img name="forum_r5_c15" src="images/forum_r5_c15.gif" width="24" height="94" border="0" id="forum_r5_c15"
                     alt="" />
             </td>
             <td rowspan="4" colspan="2">
-                <a href="Chat.aspx"><img name="forum_r5_c16" src="images/forum_r5_c16.gif" width="142" height="94" border="0" id="forum_r5_c16"
-                    alt="BatePapo" /></a>
+                <a href="Chat.aspx">
+                    <img name="forum_r5_c16" src="images/forum_r5_c16.gif" width="142" height="94" border="0" id="forum_r5_c16"
+                        alt="BatePapo" /></a>
             </td>
             <td rowspan="2" colspan="5">
                 <img name="forum_r5_c18" src="images/forum_r5_c18.gif" width="193" height="27" border="0" id="forum_r5_c18"
@@ -196,8 +204,9 @@
                     alt="" />
             </td>
             <td rowspan="2" colspan="3">
-                <a href="jogos.aspx"><img name="forum_r6_c2" src="images/forum_r6_c2.gif" width="126" height="67" border="0" id="forum_r6_c2"
-                    alt="Jogos" /></a>
+                <a href="jogos.aspx">
+                    <img name="forum_r6_c2" src="images/forum_r6_c2.gif" width="126" height="67" border="0" id="forum_r6_c2"
+                        alt="Jogos" /></a>
             </td>
             <td rowspan="3">
                 <img name="forum_r6_c5" src="images/forum_r6_c5.gif" width="23" height="73" border="0" id="forum_r6_c5"
@@ -213,8 +222,9 @@
                     alt="" />
             </td>
             <td rowspan="2" colspan="3">
-               <a href="Anuncie.aspx"> <img name="forum_r7_c19" src="images/forum_r7_c19.gif" width="148" height="67" border="0" id="forum_r7_c19"
-                    alt="Anuncie" /></a>
+                <a href="Anuncie.aspx">
+                    <img name="forum_r7_c19" src="images/forum_r7_c19.gif" width="148" height="67" border="0" id="forum_r7_c19"
+                        alt="Anuncie" /></a>
             </td>
             <td rowspan="2">
                 <img name="forum_r7_c22" src="images/forum_r7_c22.gif" width="14" height="67" border="0" id="forum_r7_c22"
@@ -254,9 +264,11 @@
                 <img name="forum_r9_c13" src="images/forum_r9_c13.gif" width="316" height="83" border="0" id="forum_r9_c13"
                     alt="" />
             </td>
-            <td colspan="3">
-                <img name="forum_r9_c18" src="images/forum_r9_c18.gif" width="153" height="83" border="0" id="forum_r9_c18"
-                    alt="" />
+            <td colspan="3" style="background-image: url('images/forum_r9_c18.gif'); text-align: right;
+                vertical-align: middle;" align="right" valign="middle">
+                <b><a href="#" onclick="mudaTamanho('textoDireito', -1);mudaTamanho('textoCorpo', -1);" class="td_Titulo">
+                    A-</a></b> <b><a href="#" onclick="mudaTamanho('textoDireito', 1);mudaTamanho('textoCorpo', 1);"
+                        class="td_Titulo">A+</a></b>
             </td>
             <td colspan="2">
                 <img name="forum_r9_c21" src="images/forum_r9_c21.gif" width="40" height="83" border="0" id="forum_r9_c21"
@@ -272,7 +284,8 @@
                 <img name="forum_r10_c1" src="images/forum_r10_c1.gif" width="46" height="201" border="0" id="forum_r10_c1"
                     alt="" />
             </td>
-            <td rowspan="2" colspan="18" style="background-color:White; text-align:justify; vertical-align:top;" align="justify" valign="top">
+            <td rowspan="2" colspan="18" style="background-color: White; text-align: justify; vertical-align: top;"
+                align="justify" valign="top">
                 <div id="textoCorpo">
                     <asp:ContentPlaceHolder ID="MenuCorpo" runat="server">
                     </asp:ContentPlaceHolder>
